# cc-ardutemp

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  build.rs  install.sh  manifest.toml
.github/workflows/: release.yml
src/: main.rs  service.rs  state.rs
src/serial/: mod.rs  protocol.rs  reader.rs
