[package]
name = "ardu-temp-bridge"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
description = "CoolerControl device service plugin for Arduino temperature sensors via serial"
license = "GPL-3.0-or-later"
readme = "README.md"
rust-version = "1.86.0"
edition = "2024"

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
systemd-journal-logger = "2.2.2"
clap = { version = "4.5.50", features = ["derive", "env"] }
anyhow = "1.0.100"
tonic = "0.14.2"
prost = "0.14.1"
tonic-prost = "0.14.2"
tokio = { version = "1.48.0", features = ["macros", "rt", "signal", "fs", "sync"] }
tokio-util = "0.7.16"
serialport = "4.7"

[build-dependencies]
tonic-prost-build = "0.14.2"

[profile.release]
strip = "symbols"
opt-level = 3
lto = "fat"
codegen-units = 1
